--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>To-do list</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <style src="./css/style.css"></style>
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Pacifico|Questrial&amp;subset=latin-ext" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
         <script src="./script.js"></script>
-
     </head>
     <body>
-        
+        <div class="password"></div>
+        <button onclick="generatePassword()">Random password</button>
     </body>
 </html>
