--- a/index.html
+++ b/index.html
@@ -14,15 +14,8 @@
                 <a href="index.html"><h1>TODO</h1></a>
             </div>
             <div class="right">
-                <form>
-                    <label for="uname"><b>Username</b></label>
-                    <input type="text" placeholder="Enter Username" name="uname" required>
-
-                    <label for="psw"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" required>
-
-                    <button type="submit">Login</button>
-                </form>
+                <a href="kontakt.html">Kontakt</a>
+                <a href="login.html">Log in</a>
             </div>
         </div>
     </body>
