--- a/login.html
+++ b/login.html
@@ -12,7 +12,18 @@
         <div class="nav">
             <div class="left">
                 <a href="index.html"><h1>TODO</h1></a>
-            </div>            
+            </div>
+            <div class="right">
+                <form>
+                    <label for="uname"><b>Username</b></label>
+                    <input type="text" placeholder="Enter Username" name="uname" required>
+
+                    <label for="psw"><b>Password</b></label>
+                    <input type="password" placeholder="Enter Password" name="psw" required>
+
+                    <button type="submit">Login</button>
+                </form>
+            </div>
         </div>
     </body>
 </html>
