Add links and a login message

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </div>
             <div class="right">
                 <a href="kontakt.html">Kontakt</a>
-                <a href="login.html">Log in</a>
+                <a href="login.html" id="login-link">Log in</a>
+                <a href="login.html" id="logout-link">Log out</a>
             </div>
         </div>
     </body>
