--- a/login.html
+++ b/login.html
@@ -25,5 +25,8 @@
                 </form>
             </div>
         </div>
+        <div id="main">
+            <p>Please log in to be able to use your Todo List!</p>
+        </div>
     </body>
 </html>
