--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Pacifico|Questrial&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script src="./script.js"></script>
+        <script src="./login.js"></script>
     </head>
     <body>
         <div class="nav">
@@ -14,9 +15,10 @@
                 <a href="index.html"><h1>TODO</h1></a>
             </div>
             <div class="right">
+                <div class="loggedInUsernameDiv"></div>
                 <a href="kontakt.html">Kontakt</a>
                 <a href="login.html" id="login-link">Log in</a>
-                <a href="login.html" id="logout-link">Log out</a>
+                <a href="login.html" id="logout-link" style="display: none;">Log out</a>
             </div>
         </div>
     </body>
